YelpCamp/v1/readme.md
#YelpCamp v1

* Add Landing Page
* Campgrounds Page that lists all campgrounds

Each Campground has:
* Name
* Image

it will be an array of object. each object will have a name and image url

[
    {name: "campground name", image: "image url"},
    {name: "campground name", image: "image url"},
    {name: "campground name", image: "image url"}
]

#Layout and Basic Styling
* Create our header and footer partials
* Add in Bootstrap

#Creating New Campgrounds

* Setup new campground POST route
* Add in body-parser
* Setup route to show form
* Add basic unstyled form


#More Styling
* Setup route to show form
* Add basic unstyled form

#Style the campgrounds page
* Add a better header/title
* Make campgrounds display in a grid


* Add in body-parser
* Set route to show formAdd basic unstyled form

#Style the campgrounds page
* Add a better header/title
* Make campgrounds display in a grid

#Style the Navbar and Form
* Add a navbar to all templates
* Style the new campground form